--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,23 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+server/node_modules
+
+# Production builds
 dist
 dist-ssr
+server/dist
+
+# Environment variables
+.env
+.env.local
+.env.production
 *.local
+server/.env
+server/.env.local
+server/.env.production
 
 # Editor directories and files
 .vscode/*
@@ -22,5 +35,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
 ._*
+
+# Testing
+coverage
+
+# Misc
+.cache
+.parcel-cache
