--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "openai": "^4.20.1",
+    "@google/genai": "^1.31.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
